--- a/IslamicGuide.Services/IslamicGuide.Services.csproj
+++ b/IslamicGuide.Services/IslamicGuide.Services.csproj
@@ -57,6 +57,8 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BookService.cs" />
+    <Compile Include="Services\SubjectService.cs" />
+    <Compile Include="Services\SubSubjectService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\IslamicGuide.Data\IslamicGuide.Data.csproj">
