--- a/IslamicGuide.Data/App.Config
+++ b/IslamicGuide.Data/App.Config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
-    <add name="DB_A4DE6E_IslamicGuideEntities" connectionString="metadata=res://*/DBEntityModels.csdl|res://*/DBEntityModels.ssdl|res://*/DBEntityModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=SQL5045.site4now.net;Initial Catalog=DB_A4DE6E_Quran;User Id=DB_A4DE6E_Quran_admin;Password=123456789a;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DB_A4DE6E_IslamicGuideEntities" connectionString="metadata=res://*/DBEntityModels.csdl|res://*/DBEntityModels.ssdl|res://*/DBEntityModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL5045.site4now.net;initial catalog=DB_A4DE6E_Quran;user id=DB_A4DE6E_Quran_admin;password=123456789a;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
