--- a/IslamicGuide.Data/IslamicGuide.Data.csproj
+++ b/IslamicGuide.Data/IslamicGuide.Data.csproj
@@ -125,6 +125,8 @@
     <Compile Include="ViewModels\Books\BookGridVM.cs" />
     <Compile Include="ViewModels\Home\HomeVM.cs" />
     <Compile Include="ViewModels\Position\PositionVM.cs" />
+    <Compile Include="ViewModels\Shared\LayoutStaticDataVM.cs" />
+    <Compile Include="ViewModels\Shared\Route.cs" />
     <Compile Include="ViewModels\Subjects\SubSubjectPageVM.cs" />
     <Compile Include="ViewModels\Subjects\SubjectVM.cs" />
   </ItemGroup>
