Adding EnitityModels 10 Positions per page 5x4 not completed pagination url error fixed

--- a/IslamicGuide.Data/App.Config
+++ b/IslamicGuide.Data/App.Config
@@ -6,6 +6,8 @@
   </configSections>
   <connectionStrings>
     <add name="DB_A4DE6E_IslamicGuideEntities" connectionString="metadata=res://*/DBEntityModels.csdl|res://*/DBEntityModels.ssdl|res://*/DBEntityModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL5045.site4now.net;initial catalog=DB_A4DE6E_Quran;user id=DB_A4DE6E_Quran_admin;password=123456789a;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DB_A506E9_ha4e4zeftEntities" connectionString="metadata=res://*/IslamicCenterEntityModel.csdl|res://*/IslamicCenterEntityModel.ssdl|res://*/IslamicCenterEntityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql5047.site4now.net;persist security info=True;user id=DB_A506E9_ha4e4zeft_admin;password=A123456789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="IslamicCenterEntities" connectionString="metadata=res://*/IslamicCenterEntities.csdl|res://*/IslamicCenterEntities.ssdl|res://*/IslamicCenterEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql5047.site4now.net;initial catalog=DB_A506E9_ha4e4zeft;persist security info=True;user id=DB_A506E9_ha4e4zeft_admin;password=A123456789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
