--- a/IslamicGuide.Data/IslamicGuide.Data.csproj
+++ b/IslamicGuide.Data/IslamicGuide.Data.csproj
@@ -69,7 +69,7 @@
       <DependentUpon>DBEntityModels.tt</DependentUpon>
     </Compile>
     <Compile Include="Class1.cs" />
-    <Compile Include="ContactUs.cs">
+    <Compile Include="ContactU.cs">
       <DependentUpon>DBEntityModels.tt</DependentUpon>
     </Compile>
     <Compile Include="DBEntityModels.Context.cs">
@@ -120,9 +120,6 @@
       <DependentUpon>DBEntityModels.tt</DependentUpon>
     </Compile>
     <Compile Include="Subscriber.cs">
-      <DependentUpon>DBEntityModels.tt</DependentUpon>
-    </Compile>
-    <Compile Include="sysdiagram.cs">
       <DependentUpon>DBEntityModels.tt</DependentUpon>
     </Compile>
     <Compile Include="User.cs">
