Revert "Commit Images"
This reverts commit 5ad4bafdf9db650102cf4a92c85b8e3569912cc7.

--- a/IslamicGuide.Data/App.Config
+++ b/IslamicGuide.Data/App.Config
@@ -4,7 +4,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
-  <connectionStrings><add name="DB_A4DE6E_IslamicGuideEntities" connectionString="metadata=res://*/DBEntityModels.csdl|res://*/DBEntityModels.ssdl|res://*/DBEntityModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL5047.site4now.net;initial catalog=DB_A506E9_ha4e4zeft;user id=DB_A506E9_ha4e4zeft_admin;password=A123456789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    <add name="DB_A4DE6E_IslamicGuideEntities" connectionString="metadata=res://*/DBEntityModels.csdl|res://*/DBEntityModels.ssdl|res://*/DBEntityModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL5045.site4now.net;initial catalog=DB_A4DE6E_Quran;user id=DB_A4DE6E_Quran_admin;password=123456789a;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
