--- a/IslamicGuide.Data/IslamicGuide.Data.csproj
+++ b/IslamicGuide.Data/IslamicGuide.Data.csproj
@@ -126,6 +126,7 @@
       <DependentUpon>IslamicCenter.tt</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\Books\BookGridVM.cs" />
+    <Compile Include="ViewModels\Home\BannerVM.cs" />
     <Compile Include="ViewModels\Home\HomeVM.cs" />
     <Compile Include="ViewModels\Position\BookContentVM.cs" />
     <Compile Include="ViewModels\Position\PositionBooksContentVM.cs" />
