--- a/SchedualedJobs/App.config
+++ b/SchedualedJobs/App.config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     <!--<add name="DB_A4DE6E_IslamicGuideEntities" connectionString="metadata=res://*/DBEntityModels.csdl|res://*/DBEntityModels.ssdl|res://*/DBEntityModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=SQL5045.site4now.net;Initial Catalog=DB_A4DE6E_Quran;User Id=DB_A4DE6E_Quran_admin;Password=123456789a;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="IslamicCenterEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql5047.site4now.net;initial catalog=DB_A506E9_ha4e4zeft;persist security info=True;user id=DB_A506E9_ha4e4zeft_admin;password=A123456789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="IslamicCenterEntities" connectionString="metadata=res://*/IslamicCenter.csdl|res://*/IslamicCenter.ssdl|res://*/IslamicCenter.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL5041.site4now.net;initial catalog=DB_A506E9_QuranSubjectsDB;user id=DB_A506E9_QuranSubjectsDB_admin;password=A123456789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
   </connectionStrings>
   <startup>
