--- a/IslamicGuide.Data/App.Config
+++ b/IslamicGuide.Data/App.Config
@@ -5,8 +5,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
+    <add name="IslamicCenterEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=198.71.225.113;initial catalog=Quran;persist security info=True;user id=QuranUser;password=Refresh__3;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />	
     <!--<add name="DB_A4DE6E_IslamicGuideEntities" connectionString="metadata=res://*/DBEntityModels.csdl|res://*/DBEntityModels.ssdl|res://*/DBEntityModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL5045.site4now.net;initial catalog=DB_A4DE6E_Quran;user id=DB_A4DE6E_Quran_admin;password=123456789a;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="IslamicCenterEntities" connectionString="metadata=res://*/IslamicCenter.csdl|res://*/IslamicCenter.ssdl|res://*/IslamicCenter.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL5041.site4now.net;initial catalog=DB_A506E9_QuranSubjectsDB;user id=DB_A506E9_QuranSubjectsDB_admin;password=A123456789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="IslamicCenterEntities" connectionString="metadata=res://*/IslamicCenter.csdl|res://*/IslamicCenter.ssdl|res://*/IslamicCenter.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL5050.site4now.net;initial catalog=DB_A54881_QuranSubjects;user id=DB_A54881_QuranSubjects_admin;password=A123456789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
