--- a/IslamicGuide.Data/IslamicGuide.Data.csproj
+++ b/IslamicGuide.Data/IslamicGuide.Data.csproj
@@ -146,6 +146,7 @@
     <Compile Include="ViewModels\Shared\PageListResult.cs" />
     <Compile Include="ViewModels\Shared\PagingModel.cs" />
     <Compile Include="ViewModels\Shared\Route.cs" />
+    <Compile Include="ViewModels\Shared\Tab.cs" />
     <Compile Include="ViewModels\Subjects\SubSubjectPageVM.cs" />
     <Compile Include="ViewModels\Subjects\SubjectVM.cs" />
   </ItemGroup>
